# CuraResources

./: .gitignore  CMakeLists.txt
definitions/: bcn3dsigma.def.json  bcn3dsigmar19.def.json  bcn3dsigmax.def.json  bcn3dsigmaxr19.def.json  fdmprinter.def.json
extruders/: bcn3dsigma_extruder_left.def.json  bcn3dsigma_extruder_right.def.json  bcn3dsigmar19_extruder_left.def.json  bcn3dsigmar19_extruder_right.def.json  bcn3dsigmax_extruder_left.def.json  bcn3dsigmax_extruder_right.def.json  bcn3dsigmaxr19_extruder_left.def.json  bcn3dsigmaxr19_extruder_right.def.json
variants/: bcn3dsigma_0.3mm_-_Brass.inst.cfg  bcn3dsigma_0.4mm_-_Brass.inst.cfg  bcn3dsigma_0.5mm_-_Hardened_Steel.inst.cfg  bcn3dsigma_0.6mm_-_Brass.inst.cfg  bcn3dsigma_0.8mm_-_Brass.inst.cfg  bcn3dsigma_1.0mm_-_Brass.inst.cfg  bcn3dsigma_e3D_-_0.3mm_-_Brass.inst.cfg  bcn3dsigma_e3D_-_0.4mm_-_Brass.inst.cfg  bcn3dsigma_e3D_-_0.5mm_-_Hardened_Steel.inst.cfg  bcn3dsigma_e3D_-_0.6mm_-_Brass.inst.cfg  bcn3dsigma_e3D_-_0.8mm_-_Brass.inst.cfg  bcn3dsigma_e3D_-_1.0mm_-_Brass.inst.cfg  bcn3dsigmar19_0.3mm_-_Brass.inst.cfg  bcn3dsigmar19_0.4mm_-_Brass.inst.cfg  bcn3dsigmar19_0.5mm_-_Hardened_Steel.inst.cfg  bcn3dsigmar19_0.6mm_-_Brass.inst.cfg  bcn3dsigmar19_0.8mm_-_Brass.inst.cfg  bcn3dsigmar19_1.0mm_-_Brass.inst.cfg  bcn3dsigmar19_e3D_-_0.3mm_-_Brass.inst.cfg  bcn3dsigmar19_e3D_-_0.4mm_-_Brass.inst.cfg  bcn3dsigmar19_e3D_-_0.5mm_-_Hardened_Steel.inst.cfg  bcn3dsigmar19_e3D_-_0.6mm_-_Brass.inst.cfg  bcn3dsigmar19_e3D_-_0.8mm_-_Brass.inst.cfg  bcn3dsigmar19_e3D_-_1.0mm_-_Brass.inst.cfg
(+4480 files in other folders)
